<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.story.detail.DetailStoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/story_img"
            android:transitionName="image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:src = "@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/story_image_desc" />

        <TextView
            android:id="@+id/name_tv"
            android:transitionName="name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/name_tv"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="123dp" />

        <TextView
            android:id="@+id/desc_tv"
            android:transitionName="description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>